# musicplayer

./: CMakeLists.txt  images.qrc  main.cpp  mianwidget.cpp  mianwidget.h  mianwidget.ui
